examples/test/testpolicy17242.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17242
  namespace: namespace88
spec:
  podSelector:
    matchLabels:
      key43: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value28
          key19: value34
      podSelector:
        matchLabels:
          key14: value34
          key8: value38
          key27: value19
